# GameOfLifeCpp

./: CMakeLists.txt  README.md  main.cpp
headers/: Core.hpp  Map.hpp  ThreadManager.hpp  Ui.hpp
src/: Core.cpp  Map.cpp  ThreadManager.cpp  Ui.cpp
